resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-static

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: hello-static
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:    
      restartPolicy: Always
      containers:
      - image: nginx:stable-alpine
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index-volume
        configMap:
          name: config-map

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-svc
  namespace: hello-static
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: hello-static
spec:
  ingressClassName: nginx
  rules:
  - host: "hellostatic.cluster.dphx.eu"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-svc
              port:
                number: 80
